--- a/2018年05月07日-Chat More.md
+++ b/2018年05月07日-Chat More.md
@@ -28,7 +28,7 @@
     
     1) How to identify the relevant words to eﬀectively guide the response generation?
     2) How to avoid dull responses and generate responses that are not only relevant but also capable of deepening and widening the dialog topics?
-    3) How to construct a large-scale dataset for generation-based models
+    3) How to construct a large-scale dataset for generation-based models?
 
 **5. 本文有哪些创新点？**
 
