添加了贡献

--- a/2018年05月07日-Chat More.md
+++ b/2018年05月07日-Chat More.md
@@ -36,4 +36,31 @@
     2) Deepen and widen the chatting topic
 
 **6. 本文的模型？**
+
 ![模型结构图](./resource/images/chat-more-figure-1.png)
+
+    1) Keyword Extraction
+        TF-IDF:
+        a) Retain nouns, verbs and adjectives, Remove other words
+        b) A session as a document
+        c) A word as a term
+    2) Global Channel
+        GRU: encode the given context into a vector
+    3) Wide Channel
+        Attention-based RNN: predict keywords to extend topics
+    4) Deep Channel
+    5) Decoder
+    6) Loss Function
+
+
+![GRU](./resource/images/chat-more-figure-2.png)
+
+**7. 本文做出了哪些贡献？**
+
+    1) Separate the topic-related keywords from the irrelevant ones, avoid dull responses
+    2) Hybrid RNN and DNN model to deepen and widen the chatting topic firstly
+    3) Construct a dataset of multi-turn dialogs in the open domain and release the data, code and parameters
+
+**8. 我们何去何从，如何进一步改进**
+
+
