--- a/20180507-Chat-More.md
+++ b/20180507-Chat-More.md
@@ -24,7 +24,7 @@
     2) No more attractive and meaningful
     3) Dull response
 
-**4.	解决这些问题有什么挑战？**
+**4. 解决这些问题有什么挑战？**
     
     1) How to identify the relevant words to eﬀectively guide the response generation?
     2) How to avoid dull responses and generate responses that are not only relevant but also capable of deepening and widening the dialog topics?
@@ -39,21 +39,39 @@
 
 ![模型结构图](./resource/images/chat-more-figure-1.png)
 
-    1) Keyword Extraction
-        TF-IDF:
-        a) Retain nouns, verbs and adjectives, Remove other words
-        b) A session as a document
-        c) A word as a term
-    2) Global Channel
+**1) Keyword Extraction**
+
+    TF-IDF:
+    a) Retain nouns, verbs and adjectives, Remove other words
+    b) A session as a document
+    c) A word as a term
+
+**2) Global Channel**
+
         GRU: encode the given context into a vector
-    3) Wide Channel
-        Attention-based RNN: predict keywords to extend topics
-    4) Deep Channel
-    5) Decoder
-    6) Loss Function
-
-
 ![GRU](./resource/images/chat-more-figure-2.png)
+
+**3) Wide Channel**
+
+        Attention-based RNN: predict keywords to extend topics
+
+![Attention-RNN](./resource/images/chat-more-figure-3.png)
+
+**4) Deep Channel**
+
+    A MLP model: choose the useful keywords to deepen the topic of interest
+
+![MLP](./resource/images/chat-more-figure-5.png)
+
+**5) Decoder**
+
+    Attention-based RNN
+
+![Attention-RNN](./resource/images/chat-more-figure-4.png)
+
+**6) Loss Function**
+
+![Loss Function](./resource/images/chat-more-figure-6.png)
 
 **7. 本文做出了哪些贡献？**
 
@@ -63,4 +81,5 @@
 
 **8. 我们何去何从，如何进一步改进**
 
+    shed light on the logical and semantic consistency between the responses and the historical contexts
 
