添加详细信息

--- a/20180507-Chat-More.md
+++ b/20180507-Chat-More.md
@@ -13,10 +13,19 @@
         3) Generation-based: more flexible
             a) Single-turn: neglect historical conversation
             b) Multi-turn
+    
+The past decade has witnessed the boom of human-machine interactions, particularly via dialog systems. Dialog systems  have been widely used in a variety of applications, spanning from entertainment and knowledge sharing, to customer services. Dialog systems can be divided into task-oriented and non-task-oriented categories. The former studies vertical domains. The latter studies open-domain topics.
 
 **2. 在上述背景下研究什么问题？**
 
-    response generation in open-domain multi-turn dialog systems
+    Response generation in open-domain multi-turn dialog systems
+
+In this paper, authors study the task of response generation in open-domain multi-turn dialog systems. For example,
+
+person A: There is a heavy rain today.
+person B: The umbrella is totally useless.
+person A: The rain is really heavy. I got wet in the afternoon and caught a cold at night.
+person B: You should take some hot tea and get a good sleep.
 
 **3. 针对这个问题，已有研究有什么不足？**
     
