--- a/20180507-Chat-More.md
+++ b/20180507-Chat-More.md
@@ -16,23 +16,28 @@
     
 The past decade has witnessed the boom of human-machine interactions, particularly via dialog systems. Dialog systems  have been widely used in a variety of applications, spanning from entertainment and knowledge sharing, to customer services. Dialog systems can be divided into task-oriented and non-task-oriented categories. The former studies vertical domains. The latter studies open-domain topics.
 
+
 **2. 在上述背景下研究什么问题？**
 
     Response generation in open-domain multi-turn dialog systems
 
 In this paper, authors study the task of response generation in open-domain multi-turn dialog systems. For example,
 
-person A: There is a heavy rain today.
-person B: The umbrella is totally useless.
-person A: The rain is really heavy. I got wet in the afternoon and caught a cold at night.
-person B: You should take some hot tea and get a good sleep.
+- person A: There is a heavy rain today.
+
+- person B: The umbrella is totally useless.
+
+- person A: The rain is really heavy. I got wet in the afternoon and caught a cold at night.
+
+- person B: You should take some hot tea and get a good sleep.
+
 
 **3. 针对这个问题，已有研究有什么不足？**
     
     1) Without elaborated distinct, incorporates noises
     2) No more attractive and meaningful
     3) Dull response
-
+    
 **4. 解决这些问题有什么挑战？**
     
     1) How to identify the relevant words to eﬀectively guide the response generation?
