--- a/20180507-Chat-More.md
+++ b/20180507-Chat-More.md
@@ -23,13 +23,13 @@ The past decade has witnessed the boom of human-machine interactions, particular
 
 In this paper, authors study the task of response generation in open-domain multi-turn dialog systems. For example,
 
-- person A: There is a heavy rain today.
+- **Person A:** There is a heavy rain today.
 
-- person B: The umbrella is totally useless.
+- **Person B:** The umbrella is totally useless.
 
-- person A: The rain is really heavy. I got wet in the afternoon and caught a cold at night.
+- **Person A:** The rain is really heavy. I got wet in the afternoon and caught a cold at night.
 
-- person B: You should take some hot tea and get a good sleep.
+- **Person B:** You should take some hot tea and get a good sleep.
 
 
 **3. 针对这个问题，已有研究有什么不足？**
