--- a/20180507-Chat-More.md
+++ b/20180507-Chat-More.md
@@ -14,19 +14,22 @@
             a) Single-turn: neglect historical conversation
             b) Multi-turn
     
-The past decade has witnessed the boom of human-machine interactions, particularly via dialog systems. Dialog systems  have been widely used in a variety of applications, spanning from entertainment and knowledge sharing, to customer services. Dialog systems can be divided into task-oriented and non-task-oriented categories. The former studies vertical domains. The latter studies open-domain topics.
+The past decade has witnessed the boom of human-machine interactions, particularly via dialog systems. Dialog systems have been widely used in a variety of applications, spanning from entertainment and knowledge sharing, to customer services. Dialog systems can be divided into task-oriented and non-task-oriented categories. The former studies vertical domains. The latter studies open-domain topics. Implement methods mainly includes rule-based, retrieval-based and generation-based methods. To be more specific, the rule-based methods restrict diversity, the retrieval-based methods depend repository, the generation-based methods are more flexible. The generation-based methods can divide into single-turn and multi-turn models. Where, single-turn models neglect the context of conversation. Multi-turn generation-based methods are the best and the hardest.
+
 
 
 **2. 在上述背景下研究什么问题？**
 
     Response generation in open-domain multi-turn dialog systems
 
-In this paper, authors study the task of response generation in open-domain multi-turn dialog systems. For example,
+    Person A: There is a heavy rain today.
+    Person B: The umbrella is totally useless.
+    Person A: The rain is really heavy. I got wet in the afternoon and caught a cold at night.
+    Person B: You should take some hot tea and get a good sleep.
 
-    - Person A: There is a heavy rain today.
-    - Person B: The umbrella is totally useless.
-    - Person A: The rain is really heavy. I got wet in the afternoon and caught a cold at night.
-    - Person B: You should take some hot tea and get a good sleep.
+
+In this paper, authors study the task of response generation in open-domain multi-turn dialog systems. In this paper, authors study the task of response generation in open-domain multi-turn dialog systems. This shows the topic penetration.
+This shows the topic extension. The topic is deepened and widened.
 
 
 **3. 针对这个问题，已有研究有什么不足？**
@@ -34,7 +37,9 @@ In this paper, authors study the task of response generation in open-domain mult
     1) Without elaborated distinct, incorporates noises
     2) No more attractive and meaningful
     3) Dull response
-    
+
+The first, the majority of prior eﬀorts consider all the phrases in the entire context without elaborated distinction, which indeed incorporates noises and may thus hurt the desired performance. The second, Fewer researchers thus far have addressed the issue that making the conversation to be more attractive and meaningful. The last, current generation-based systems frequently generate dull responses, which are not informative or meaningless. For example, I don’t know.
+
 **4. 解决这些问题有什么挑战？**
     
     1) How to identify the relevant words to eﬀectively guide the response generation?
@@ -50,12 +55,24 @@ In this paper, authors study the task of response generation in open-domain mult
 
 ![模型结构图](./resource/images/chat-more-figure-1.png)
 
+To deepen and widen the chatting topics, this paper present a scheme to explore the keywords in a dialog as shown in the picture. The scheme ﬁrst segments the utterances and extracts the keywords from the context. After that, the model inputs the context and its keywords into three parallel channels, namely, global, wide and deep channels. These channels respectively encode the context into an embedding vector, predict wider keywords, and select deeper keywords based on the context and its keywords. Ultimately, the model adopts an attention mechanism to weigh the context and keywords before feeding them into the RNN decoder that is used to generate a response.
+
+Let’s detail each component of this scheme.
+
+
 **1) Keyword Extraction**
+
+![关键词提取图](./resource/images/chat-more-figure-7.png)
 
     TF-IDF:
     a) Retain nouns, verbs and adjectives, Remove other words
     b) A session as a document
     c) A word as a term
+
+This part, the authors apply TF-IDF to extract keywords from the context.
+They removed the stop words and only retained nouns, verbs, and adjectives in corpus.
+They consider a session as a document and a word as a term to calculate the TF-IDF value of each word.
+They finally chose top 20 keywords from each session.
 
 **2) Global Channel**
 
