--- a/20180507-Chat-More.md
+++ b/20180507-Chat-More.md
@@ -101,13 +101,64 @@ They finally chose top 20 keywords from each session.
 
 ![Loss Function](./resource/images/chat-more-figure-6.png)
 
-**7. 本文做出了哪些贡献？**
+**7. 数据集**
+
+- DailyDialog: http://yanran.li/dailydialog
+
+- Sina Weiba Conversation Corpus
+
+![](./resource/images/chat-more-figure-9.png)
+
+    Dataset rules:
+    - The turns in the session are more than three
+    - The response is meaningful and has two keywords at least. The keywords refer to those with the TF-IDF value no less than a given threshold.
+
+
+**8. 实验结果**
+
+![实验结果图](./resource/images/chat-more-figure-8.png)
+
+    1) The model achieves the lowest perplexity on the two datasets. The advantageous performance veriﬁes that the predicted and selected keywords actually provide more information to beneﬁt the model
+    2) The higher BLEU values demonstrate the responses are closer to the ground truth.
+    3) The Distinct-1 value is much higher than all the baselines, which demonstrates that DAWnet can generate more diﬀerent words and the responses are hence more diverse. 
+
+![实验结果图](./resource/images/chat-more-figure-10.png)
+
+![实验结果图](./resource/images/chat-more-figure-11.png)
+
+    1) DAWnet outperforms the baselines. Among the three baselines, SEQ2SEQ performs the worst and HRED the best. 
+    2) Over 45% of the triplets were labeled as ”tie”. By checking these samples, we found most of them are illogical or irrelevant.
+
+![实验结果图](./resource/images/chat-more-figure-12.png)
+
+![实验结果图](./resource/images/chat-more-figure-13.png)
+
+![实验结果图](./resource/images/chat-more-figure-14.png)
+
+    1) The authors chose the bad samples judged during the subjective evaluation and analyzed why they were worse in the comparison.
+    2) The bad cases fall into four categories: the ungrammatical response, the irrelevant response, the illogical response, and the universal response.
+
+**9. 本文做出了哪些贡献？**
 
     1) Separate the topic-related keywords from the irrelevant ones, avoid dull responses
     2) Hybrid RNN and DNN model to deepen and widen the chatting topic firstly
     3) Construct a dataset of multi-turn dialogs in the open domain and release the data, code and parameters
 
-**8. 我们何去何从，如何进一步改进**
+**10. 我们何去何从，如何进一步改进**
 
-    shed light on the logical and semantic consistency between the responses and the historical contexts
+    Innovations:
+
+        1) Study the context-aware dialog systems
+
+        2) Deepen and widen the chatting topic
+
+
+    Thinking:
+
+        1) Semantic
+
+        2) Improve logical
+
+        3) Word extraction + Phrase extraction
+
 
