添加了Chat-More的中文翻译

--- a/20180507-Chat-More.md
+++ b/20180507-Chat-More.md
@@ -155,10 +155,14 @@ They finally chose top 20 keywords from each session.
 
     Thinking:
 
-        1) Semantic
+        1) Sentiment
 
-        2) Improve logical
+        2) Improve logical and semantic consistency
 
         3) Word extraction + Phrase extraction
+
+How to add a semantic module in the DAWnet?
+How to improve logical and semantic consistency between the responses and the historical contexts?
+How to combine word extraction and phrase extraction?
 
 
